# simdeez

./: .gitmodules  Cargo.toml
.cargo/: config.toml  flags
src/: invoking.rs  lib.rs
src/base/: specializations.rs
src/engines/: mod.rs
src/engines/avx2/: mod.rs  simd.rs
src/engines/scalar/: simd.rs
src/libm_ext/: mod.rs
src/ops/: bit.rs  casts.rs  f32.rs  f64.rs  i16.rs  i32.rs  i64.rs  i8.rs  mod.rs
src/tests/: run.rs
src/tests/lib/: tester.rs
