[package]
name = "simdeez"
version = "2.0.0-dev5"
authors = ["Jack Mott <jack.mott@gmail.com>", "Arduano"]
description = "SIMD library to abstract over different instruction sets and widths"
license = "LGPL-3.0-or-later"
documentation = "https://docs.rs/simdeez/"
readme = "README.md"
keywords = ["SIMD", "avx2", "sse", "performance", "no_std"]
repository = "https://github.com/jackmott/simdeez"
categories = ["hardware-support", "science", "game-engines"]
edition = "2024"
publish = false

[lib]
doctest = false

[dependencies]
paste = "1.0.15"
libm = "0.2.11"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[profile.dev]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
